<resources>
    <string name="app_name">Secretly</string>
    <string name="Open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="user_name">User</string>
    <string name="greet">Welcome Back!</string>
    <string name="image">IMAGE</string>
    <string name="text">TEXT</string>
    <string name="dh">Drop Here</string>
    <string name="c">Convert</string>
    <string name="vi">View it</string>
    <string name="at">Add Text</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="sign">Sign Up</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="language_ENG">   English</string>
    <string name="language_HIN">   Hindi</string>

    <string name="about_content">Secretly the app that provide Privacy assurance .Concern about the privacy try our app for Therapy.The best spaces to safeguard confidential image. This provides end to end encryption to share the images.Simple UI With easy To Use Features.No Database Accuured no internet required.  At secretly your images are being converted to code to make transmission process more secure. At Reciver side you view the image by entering the received code. A simple UI that makes the application more user friendly and easy to use.
Your Confidential Images Are shared without being Uploaded on any serverThis app provides you high encryption also the delay times is very minimum. With this app piracy is not possible to your privacy.
Secretly the app that provide Privacy assurance .The best spaces to safeguard confidential image. No Database Accquired no internet required.Concern about the privacy try our app for Therapy.</string>
    <string name="hc1">Step 1.Click on the Drop here on the screen.
                                            Step 2.Select the image from the device.
                                            Step 3.Now click the convert button to get the code.
                                                    Step 4.Copy it and send code through any Media.</string>
    <string name="hc2">To switch from image to text page click on the Bidirectional Arrows to switch the mode.
Also to switch from text to image page click on the Bidirectional Arrows.</string>
    <string name="hc3">Step 1.Click on the add text area on the screen.
                                            Step 2.Now Enter/Paste the code you have.
                                            Step 3.Now Click The ViewIt Button To view .
                                                Step 4.The Image appears just below the viewIt Section.</string>
    <string name="title_activity_maximize">maximize</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>