<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7EAF6"
    android:orientation="vertical">

    <TextView
        android:id="@+id/SUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:hint="@string/user_name"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColorHint="#000000"/>

    <TextView
        android:id="@+id/SGreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/greet"
        android:textColor="#000000"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:background="#E7EAF6"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="63dp"
            android:backgroundTint="#D3D5FD"
            android:elevation="11dp"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true"
            android:paddingLeft="15dp"
            app:contentPaddingLeft="28dp"
            app:contentPaddingTop="15dp"
            android:id="@+id/SC1">

            <TextView
                android:id="@+id/SC1T1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:textColor="#000000"
                android:textSize="16dp"/>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/SimageView5"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:onClick="change"
            app:srcCompat="@drawable/baseline_compare_arrows_24" />

        <androidx.cardview.widget.CardView
            android:layout_width="115dp"
            android:layout_height="60dp"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true"
            android:elevation="11dp"
            android:backgroundTint="#D3D5FD"
            android:paddingRight="15dp"
            app:contentPaddingLeft="28dp"
            app:contentPaddingTop="14dp"
            android:id="@+id/SC2">

            <TextView
                android:id="@+id/SC2T1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image"
                android:textColor="#000000"
                android:textSize="16dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#E7EAF6">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:backgroundTint="#D3D5FD"
            android:duplicateParentState="false"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            android:id="@+id/SC3">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/SpasteText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:isScrollContainer="true"
                        android:textColor="#474A56"
                        android:visibility="invisible" />
                </LinearLayout>
            </ScrollView>

            <ImageView
                android:id="@+id/SATI"
                android:layout_width="241dp"
                android:layout_height="87dp"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                app:srcCompat="@drawable/baseline_add_circle_outline_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="150dp"
                android:text="@string/at"
                android:textColor="#474A56"
                android:textSize="18dp"
                android:id="@+id/Smesg"></TextView>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="15dp"
        android:paddingRight="33dp"
        android:background="#E7EAF6">


        <Button
            android:id="@+id/SdeconvertButton"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:backgroundTint="#474A56"
            android:onClick="unconvert"
            android:text="@string/vi"
            android:textColor="#fff"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingRight="5dp"
        android:background="#E7EAF6">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#D3D5FD"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            android:id="@+id/SC4">



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:id="@+id/SdeconvertedImage"/>

            <ImageView
                android:id="@+id/Max"
                android:layout_width="95dp"
                android:layout_height="47dp"
                android:layout_gravity="right"
                android:paddingTop="10dp"
                android:src="@drawable/baseline_fullscreen_24"/>


        </androidx.cardview.widget.CardView>

    </LinearLayout>>

</LinearLayout>