<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7EAF6"
    android:orientation="vertical">



    <TextView
        android:id="@+id/UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"

        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        android:hint="@string/user_name"
        android:textColorHint="#000000"/>

    <TextView
        android:id="@+id/Greet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/greet"
        android:textColor="#000000"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E7EAF6"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="15dp">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="63dp"
            android:backgroundTint="#D3D5FD"
            android:elevation="11dp"
            android:paddingLeft="15dp"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true"
            app:contentPaddingLeft="28dp"
            app:contentPaddingTop="15dp">

            <TextView
                android:id="@+id/C1T1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image"
                android:textColor="#000000"
                android:textSize="16dp" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:onClick="change"
            app:srcCompat="@drawable/baseline_compare_arrows_24" />

        <androidx.cardview.widget.CardView
            android:layout_width="115dp"
            android:layout_height="60dp"
            android:backgroundTint="#D3D5FD"
            android:elevation="11dp"
            android:paddingRight="15dp"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true"
            app:contentPaddingLeft="28dp"
            app:contentPaddingTop="14dp">

            <TextView
                android:id="@+id/C2T1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:textColor="#000000"
                android:textSize="16dp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E7EAF6"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:backgroundTint="#D3D5FD"
            android:duplicateParentState="false"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/openGallery"
                android:layout_width="241dp"
                android:layout_height="87dp"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:visibility="visible"
                app:srcCompat="@drawable/baseline_add_photo_alternate_24" />

            <TextView
                android:id="@+id/DHMess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="150dp"
                android:text="@string/dh"
                android:textColor="#474A56"
                android:textSize="18dp"></TextView>

            <ImageView
                android:id="@+id/importedImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter" />


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E7EAF6"
        android:paddingTop="8dp"
        android:paddingRight="33dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E7EAF6"
            android:paddingLeft="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:backgroundTint="#474A56"
            app:cardCornerRadius="35dp"
            app:cardElevation="10dp"
            android:id="@+id/Op">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/options"
            android:paddingTop="12dp"
            android:hint="Options"
            android:textSize="18dp"
            android:textColorHint="#fff"
            android:paddingLeft="20dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_arrow_drop_down_circle_24"
            android:layout_gravity="right"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:id="@+id/op"></ImageView>





        </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/convertButton"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:backgroundTint="#474A56"
            android:onClick="convert"
            android:text="@string/c"
            android:textColor="#fff"
            android:layout_weight="0"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E7EAF6"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingRight="5dp">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#D3D5FD"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="270dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="13dp"
                    android:paddingRight="13dp"
                    android:paddingTop="35dp">



                    <TextView
                        android:id="@+id/convertedText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#474A56" />

                </LinearLayout>
            </ScrollView>

            <ImageView
                android:id="@+id/copyText"
                android:layout_width="95dp"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:paddingTop="10dp"
                android:src="@drawable/baseline_content_copy_24">

            </ImageView>


        </androidx.cardview.widget.CardView>

    </LinearLayout>



</LinearLayout>