<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7EAF6"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:background="#E7EAF6">


    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#D3D5FD"
    android:elevation="11dp"
    android:padding="15dp">

        <TextView
                android:id="@+id/helpContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="How to Convert ?"
                android:textStyle="bold"
                android:textSize="22dp"
                android:padding="12dp"
                android:textColor="#000000"/>

</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#D3D5FD"
        android:elevation="11dp"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hc1"

            android:textSize="22dp"
            android:padding="10dp"
            android:textColor="#000000"/>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="20dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#D3D5FD"
        android:elevation="11dp"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How to switch the Mode ?"
            android:textStyle="bold"
            android:textSize="22dp"
            android:padding="12dp"
            android:textColor="#000000"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#D3D5FD"
        android:elevation="11dp"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hc2"
            android:textSize="22dp"
            android:padding="10dp"
            android:textColor="#000000"/>


    </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="20dp">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#D3D5FD"
            android:elevation="11dp"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="How to Convert ?"
                android:textStyle="bold"
                android:textSize="22dp"
                android:padding="12dp"
                android:textColor="#000000"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#D3D5FD"
            android:elevation="11dp"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hc3"
                android:textSize="22dp"
                android:padding="10dp"
                android:textColor="#000000"/>


        </androidx.cardview.widget.CardView>
    </LinearLayout>
        </LinearLayout>
    </ScrollView>




        </LinearLayout>
